# embedded-sandbox

stm32-i2c/: .gitignore  Cargo.toml
stm32-i2c/src/: main.rs
